# UnifiedOptitrackClients

./: .gitignore  CMakeLists.txt  README.md  build.sh  qualisys_dummy_server.py
agents/: console_agent.hpp  ivy_agent.hpp  log_agent.hpp  mavlink_agent.hpp  ros2_agent.hpp  udp_agent.hpp
clients/: console_client.hpp  debug_client.hpp  ivy_client.hpp  log_client.hpp  mavlink_client.hpp  ros2_client.hpp  udp_client.hpp
dockerfiles/: console.dockerfile  console_entrypoint.sh  ivy.dockerfile  ivy_entrypoint.sh  log.dockerfile  log_entrypoint.sh  mavlink.dockerfile  mavlink_entrypoint.sh  ros2.dockerfile  ros2_entrypoint.sh  ros2px4.dockerfile  ros2px4_entrypoint.sh  udp.dockerfile  udp_entrypoint.sh
include/: agent.hpp  cyberzoo_mocap_client.hpp  mocap.hpp  pose_calculations.hpp  rigid_body.hpp  thread_safe_fixed_size_deque.hpp  unified_mocap_client.hpp  unified_mocap_router.hpp
mocaps/: optitrack_mocap.hpp  qualisys_mocap.hpp  qualisys_sdk_mocap.hpp  test_mocap.hpp
scripts/: qualisys_dummy_server.py  source_px4_msgs.sh  source_ros_and_msgs.sh
src/: agent.cpp  cyberzoo_mocap_client.cpp  debug_impl.cpp  ivy.cpp  main.cpp  mocap.cpp  pose_calculations.cpp  rigid_body.cpp  thread_safe_fixed_size_deque.cpp  unified_mocap_client.cpp  unified_mocap_router.cpp
src/agents/: agent.cpp  console_agent.hpp  ivy_agent.hpp  log_agent.hpp  mavlink_agent.hpp  px4_agent.hpp  ros2_agent.hpp  ros2px4_agent.hpp  udp_agent.hpp
src/common/: pose_calculations.cpp  rigid_body.cpp
src/mocaps/: mocap.cpp  optitrack_mocap.hpp  qualisys_mocap.hpp  qualisys_sdk_mocap.hpp  test_mocap.hpp
